test/fail/classes/protected_oo_assign.lly
#[
SyntaxError: Test::x is marked protected, and not available here.
Where: File "protected_oo_assign.lly" at line 8
]#

class Test() { protected var @x = 10 }

Test::new().x = 11
